prevent balisage to wrap

--- a/app/styles/_trek-detail.scss
+++ b/app/styles/_trek-detail.scss
@@ -52,6 +52,7 @@
 				&.wrapper {
 					width: auto;
 					height: auto;
+                    white-space: nowrap;
 				}
 			}
 		}
